Changed App description & fixed overflow in BasicLayout - main__container & Making wheel layout

--- a/src/front/huelette/src/core/BasicLayout.css
+++ b/src/front/huelette/src/core/BasicLayout.css
@@ -16,7 +16,7 @@
     top: 100px;
     height: Calc(100% - 100px);
     padding: 2em;
-    overflow: scroll;
+    overflow-y: scroll;
     transition: 1s ease-in-out;
 }
 
